# axp2101-dd

./: Cargo.toml  README.md  axp2101_ocr.md  build.rs  device.yaml  device_template.yaml  implementation_plan.md  registers_list.csv
docs/: AXP2101_no_watermark.md
examples/: test_pmic_async.rs  test_pmic_blocking.rs
src/: adc_helpers.rs  driver.rs  fmt.rs  lib.rs
