[package]
name = "axp2101-dd"
version = "0.1.0"
edition = "2024"
description = "A driver for the AXP2101 power management IC (uses device-driver crate)"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/axp2101-dd"
keywords = ["embedded-hal-driver", "async", "no-alloc", "no-std", "embedded"]
readme = "README.md"
documentation = "https://docs.rs/axp2101-dd"

[dependencies]
bisync = "0.3"
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
device-driver = { version = "1.0.6", default-features = false, features = ["yaml"] }
embedded-hal = "1.0.0"
embedded-hal-async =  "1.0.0"
thiserror = { version = "2.0.12", default-features = false }

[features]
default = []
std = ["thiserror/std"]
log = ["dep:log"]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03", "device-driver/defmt-03"]

[dev-dependencies]
embassy-executor = { version = "0.7.0", features = [
  "task-arena-size-20480",
] }
embassy-time = "0.4.0"
esp-hal = { version = "1.0.0-beta.1", features = [
  "esp32c3",
  "unstable",
] }
esp-hal-embassy = { version = "0.8.0", features = ["esp32c3"] }
defmt = "1.0"
defmt-rtt = "1.0"


[[example]]
name = "test_pmic_async"

[[example]]
name = "test_pmic_blocking"

[lib]
test = false
bench = false
